fixed overflow

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -100,13 +100,17 @@ h3 {
     padding-right: 165px;
 }
 
+.overflow-hidden {
+    overflow: hidden;
+}
+
 .section::before {
     position: absolute;
     top: 0;
     left: 0;
     background-image: url('../images/background.png');
-    width: 1440px;
-	height: 914px;
+    width: 100%;
+	height: 100%;
     background-repeat: no-repeat;
     background-size: cover;
     opacity: 10%;
@@ -119,7 +123,6 @@ h3 {
     top: 55px;
     left: 461px;
     z-index: 1;
-    overflow: hidden;
 }
 
 .img-1 {
